(lang dune 3.12)

(name searipp)

(generate_opam_files true)

(authors "Author Name")




(package
 (name searipp)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
(using menhir 2.1)
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
